makefile and frame

--- a/module00/ex01/Makefile
+++ b/module00/ex01/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: jiglesia <jiglesia@student.42.fr>          +#+  +:+       +#+         #
+#    By: ciglesia <ciglesia@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2021/06/04 22:48:40 by jiglesia          #+#    #+#              #
-#    Updated: 2021/06/12 20:05:01 by jiglesia         ###   ########.fr        #
+#    Created: 2021/05/20 17:00:07 by ciglesia          #+#    #+#              #
+#    Updated: 2021/06/14 18:34:10 by jiglesia         ###   ########.fr        #
 #                                                                              #
 #******************************************************************************#
 
@@ -14,22 +14,23 @@ NAME		=	phonebook
 
 #****************** INC *******************#
 # General
-INC			=	./include/
+INC			=	./
 
 INCLUDE		=	-I $(INC)
 
 #***************** SRC* *******************#
 
-DIRSRC		=	./
+DIRSRC		=	./src/
 
 SRC			=	phonebook.cpp Book.class.cpp
 
-#***************** DEPS ******************#
+SRCS		=	$(SRC)
 
+#***************** DEPS ******************#
 
 DIROBJ		=	./
 
-OAUX		=	$(SRC:%=$(DIROBJ)%)
+OAUX		=	$(SRCS:%=$(DIROBJ)%)
 DEPS		=	$(OAUX:.cpp=.d)
 OBJS		=	$(OAUX:.cpp=.o)
 
@@ -46,25 +47,39 @@ endif
 
 CC			=	/usr/bin/clang++
 RM			=	/bin/rm -f
+ECHO		=	/bin/echo -e
+BOLD		=	"\e[1m"
+BLINK		=	 "\e[5m"
+RED			=	 "\e[38;2;255;0;0m"
+GREEN		=	 "\e[92m"
+BLUE		=	 "\e[34m"
+YELLOW		=	 "\e[33m"
+E0M			=	 "\e[0m"
 
 #************************ DEPS COMPILATION *************************
 
 %.o		:		../$(DIRSRC)/%.cpp
+				@printf $(GREEN)"Generating minishell objects... %-33.33s\r" $@
 				@$(CC) $(CFLAGS) $(INCLUDE) -MMD -o $@ -c $<
 
 #************************ MAIN COMPILATION *************************
 
 $(NAME)	:		$(OBJS)
-				@$(CC) $(INCLUDE) $(CFLAGS) -o $(NAME) $(OBJS)
+				@$(CC)  $(INCLUDE) $(CFLAGS) -o $(NAME) $(OBJS) $(INC_LIB)
 
 clean	:
 				@($(RM) $(OBJS))
+				@($(RM) $(DEPS))
+				@$(ECHO) $(RED)'> Directory cleaned'$(E0M)
 
 all		:		$(NAME)
 
 fclean	:		clean
 				@$(RM) $(NAME)
+				@$(ECHO) $(RED)'> Executable removed'$(E0M)
 
 re		:		fclean all
 
 .PHONY	:		all clean re
+
+-include $(DEPS)
